--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,7 @@
       <th>Email</th>
       <th>Phone</th>
       <th>Address</th>
+      <th>TotalPrice</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= user.email %></td>
         <td><%= user.phone %></td>
         <td><%= user.address %></td>
+        <td><%= user.orders.sum(&:total_price) %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
